fix spacing in about me and hamburger button in contact and footer in portfolio

--- a/assets/aboutme.css
+++ b/assets/aboutme.css
@@ -53,6 +53,6 @@ a{
 }
 
 /* sizing of p */
-p{
+#big{
     font-size: 1.5em;
 }
